checking code options in html

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@ $(document).ready(function () {
 </ul>
 </div>
 </div>
+<div id="the-data" class="section level2">
+<h2>The data</h2>
+</div>
 
 
 
