ready to submit

--- a/index.html
+++ b/index.html
@@ -124,10 +124,17 @@ $(document).ready(function () {
 </div>
 
 
-<p>For the final assingment I chose to use the Learning2014 data set and Logistic regression.</p>
+<div id="abstract" class="section level2">
+<h2>Abstract</h2>
+<p>The aim of this final assingement was to achieve in-depth learning of the skills I learned during the Open Data Science Course at the University of Helsinki, fall 2017. I investigated the relationship between age, gender, and some variables describing students attitudes and learning habits on exam points. Of this explanatory variables, only Attitude and Strategic learning showed a significant positive relationship with points higher than the median score.</p>
+</div>
+<div id="hypothesis" class="section level2">
+<h2>Hypothesis</h2>
+<p>For the final assingment I chose to use the Learning2014 data set and Logistic regression. I am intrested in looking at which explanatory ariables that associates with the outcome of having hifgher points than the median points.</p>
 <div id="data-wrangling" class="section level4">
 <h4>Data wrangling</h4>
-<p>The data wrangling is computed in an R Script, wich can be found at <a href="https://github.com/fripa/IODS-final/blob/master/data_wrangling.R" class="uri">https://github.com/fripa/IODS-final/blob/master/data_wrangling.R</a> The data wranlging includes computing some explanatory variables by joining together variables from the same dimensions, and creating a binary outcome variable.</p>
+<p>The data wrangling is computed in an R Script, wich can be found at <a href="https://github.com/fripa/IODS-final/blob/master/data_wrangling.R" class="uri">https://github.com/fripa/IODS-final/blob/master/data_wrangling.R</a> The data wranlging includes computing some explanatory variables by joining together variables from the same dimensions, and creating a binary outcome variable needed for the logistic regression.</p>
+</div>
 </div>
 <div id="logistic-regression" class="section level2">
 <h2>Logistic regression</h2>
